--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-sortable-hoc": "^1.9.1",
     "react-virtualized": "^9.21.2",
     "squire-rte": "github:ProtonMail/Squire#hotfix",
+    "tabbable": "^5.1.3",
     "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
