--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,6 @@
         "react/button-has-type": ["warn"],
         "react/forbid-prop-types": ["warn"],
         "react/no-array-index-key": ["warn"],
-        "jsx-a11y/no-autofocus": ["off"],
         "jsx-a11y/no-static-element-interactions":  ["warn"],
         "jsx-a11y/control-has-associated-label": ["warn"],
         "jsx-a11y/click-events-have-key-events":  ["warn"],
@@ -19,7 +18,6 @@
         "jsx-a11y/label-has-associated-control":  ["warn"],
         "jsx-a11y/no-noninteractive-tabindex":  ["warn"],
         "jsx-a11y/no-noninteractive-element-interactions":  ["warn"],
-        "jsx-a11y/no-noninteractive-element-to-interactive-role":  ["warn"],
-        "jsx-a11y/alt-text": ["warn"]
+        "jsx-a11y/no-noninteractive-element-to-interactive-role":  ["warn"]
     }
 }
