--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "react-router-dom": "^5.2.0",
     "react-sortable-hoc": "^1.9.1",
     "react-virtualized": "^9.21.2",
-    "squire-rte": "github:ProtonMail/Squire#hotfix",
+    "squire-rte": "github:ProtonMail/Squire#proton-v4",
     "tabbable": "^5.1.3",
     "tinycolor2": "^1.4.1"
   },
