--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       "prettier --write"
     ]
   },
-  "license": "MIT",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/ProtonMail/react-components/issues"
   },
